Changes to dynamic template holder

--- a/MeetingsTable/Meetings/templates/Meetings/welcome.html
+++ b/MeetingsTable/Meetings/templates/Meetings/welcome.html
@@ -6,6 +6,6 @@
     </head>
     <body>
           <p>A Meeting Planner for Django Practice</p>
-          <p>{{message}}</p>
+          <p>{{message}} Meeting/s are scheduled in database</p>
     </body>
 </html>    
