--- a/MeetingsTable/MeetingAllocation/templates/MeetingAllocation/detail.html
+++ b/MeetingsTable/MeetingAllocation/templates/MeetingAllocation/detail.html
@@ -7,5 +7,8 @@
     <body>
           <b>{{meeting.Title}}</b>
           <p>{{meeting.Title}} meeting will be held at {{meeting.Date}}/{{meeting.Time}} for {{meeting.Duration}}hour/s in {{meeting.room}}</p>
+          <p>To return to Homepage 
+              <a href="{% url 'Welcome' %}">Home</a>
+          </p>
     </body>
 </html>    
