Css page and an image has been added

--- a/MeetingsTable/Meetings/templates/Meetings/welcome.html
+++ b/MeetingsTable/Meetings/templates/Meetings/welcome.html
@@ -1,12 +1,15 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
          <meta charset="UTF-8">
          <title>TimetablePlanner</title>
+         <link rel="stylesheet" href="{% static 'Meetings/style.css' %}">
     </head>
     <body>
           <p>A Meeting Planner for Django Practice</p>
           <h2>MEETING</h2>
+          <img src="{% static 'Meetings/planner.jpg' %}" width="100px">
           <ul>
               {% for meeting in meetings %}
               <li>
